--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.9",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
+    "@langchain/community": "^0.3.28",
+    "@langchain/core": "^0.3.37",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
@@ -56,16 +59,19 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
+    "ignore": "^7.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.0",
     "next": "^15.0.1",
     "next-themes": "^0.4.4",
+    "octokit": "^4.1.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
@@ -77,6 +83,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^3.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
   },
@@ -92,7 +99,7 @@
     "postcss": "^8.4.39",
     "prettier": "^3.3.2",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.14.0",
+    "prisma": "^6.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.5.3"
   },
