--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.1.8",
     "@clerk/nextjs": "^6.9.9",
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.10.0",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.37",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^6.3.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -59,6 +60,9 @@
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@uiw/react-md-editor": "^4.0.5",
+    "ai": "^4.1.17",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -66,6 +70,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
     "geist": "^1.3.0",
+    "groq-sdk": "^0.14.0",
     "ignore": "^7.0.3",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.471.0",
@@ -77,9 +82,11 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
+    "react-syntax-highlighter": "^15.6.1",
     "recharts": "^2.15.0",
     "server-only": "^0.0.1",
     "sonner": "^1.7.1",
+    "stripe": "^17.6.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
